# BitNet-7B-KDE

./: .env  .gitignore  AIMLAPI.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  OPENAI_SETUP.md  README.md  pyproject.toml  quick_poc_test.py  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DATA_SCHEMA.md  EVALUATION.md  PROVIDERS.md  RELEASE_PROCESS.md  STORAGE.md  TESTING.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md  design.md  guide.md  roadmap.md
docs/ascii_maps/: flow.md  user_steps.md
notebooks/: BitNet_7B_KDE_Colab_POC.ipynb  Colab_Bootstrap.ipynb
scripts/: collect_kd_traces.py  dry_run_7b_memory.py  eval_and_qei.py  generate_prompts.py  run_teacher_baseline.py  sanity_check.py  storage.py  train_mini_bitnet.py
src/bitnet/: __init__.py  data.py  llm_clients.py  losses.py  models.py
src/bitnet/utils/: device.py
