[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet"
version = "0.1.0"
description = "BitNet-7B-KDE (Knowledge Distillation Engine) mini training + 7B dry-run"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "tokenizers>=0.15",
  "pyarrow>=14",
  "pydantic>=2",
  "requests>=2.31",
  "tqdm>=4.66",
  "numpy>=1.24",
  "jsonschema>=4.21",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bitnet*"]

[tool.ruff]
line-length = 100
target-version = "py39"
